[tool.poetry]
name = "medical-data-visualization"
version = "0.1.0"
description = ""
authors = ["Soniaseguin <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
seaborn = "^0.11.1"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
